--- a/_events/2023-11-qties.md
+++ b/_events/2023-11-qties.md
@@ -1,10 +1,10 @@
 ---
-title: QTies Gruppenabende November 2023 (Präsenz und Online)
+title: QTies Gruppenabende November 2023
 sort_date: 2023-11-20
 dates:
   - { day: 2023-11-03, start: "19:00", end: "21:00", place: "Sub, Müllerstraße 14" }
   - { day: 2023-11-20, start: "19:00", end: "21:00", place: "LeZ, Müllerstraße 26" }
-description: Reguläre QTies Gruppenabende Präsenz und Online
+description: Reguläre QTies Gruppenabende
 hero: /img/events/2023-11-qties.png
 ---
 
