--- a/_events/2023-12-qties.md
+++ b/_events/2023-12-qties.md
@@ -3,13 +3,14 @@ title: QTies Gruppenabende Dezember 2023
 sort_date: 2023-12-18
 dates:
   - { day: 2023-12-01, start: "19:00", end: "21:00", place: "Sub, Müllerstraße 14" }
-  - { day: 2023-12-15, start: "18:00", end: "20:00", place: Online }
   - { day: 2023-12-18, start: "19:00", end: "21:00", place: "LeZ, Müllerstraße 26" }
 description: Reguläre QTies Gruppenabende mit Weihnachtsfeier
 hero: /img/events/2023-12-qties.png
 ---
 
-Link für die Online-Teilnahme am 15. Dezember: [hier klicken](/qties_online).
+~~Link für die Online-Teilnahme am 15. Dezember: [hier klicken](/qties_online).~~
+
+Online-Treffen am 15. Dezember gestrichen.
 
 Am 18. Dezember wollen wir eine kleine Weihnachtsfeier im LeZ machen.
 Ab 18 Uhr starten die Vorbereitungen, ab 19 Uhr dürft ihr als Gäste kommen.
