--- a/_events/2024-12-qties.md
+++ b/_events/2024-12-qties.md
@@ -10,7 +10,7 @@ hero: /img/events/2024-12-qties.png
 
 Am Dienstag, den 17. Dezember wollen wir eine kleine Weihnachtsfeier 🎄 im LeZ machen.
 Ab 18 Uhr starten die Vorbereitungen, ab 19 Uhr dürft ihr als Gäste kommen.
-Bitte tragt euch [hier ein](/nuudel.digitalcourage.de/fsv5OF8Gj8RAlBlX), damit wir besser planen können. 🌟
+Bitte tragt euch [hier ein](https://nuudel.digitalcourage.de/fsv5OF8Gj8RAlBlX), damit wir besser planen können. 🌟
 
 **Achtung:** Termin für die Weihnachtsfeier ist am Dienstag, nicht am Montag wie sonst immer im LeZ!
 
